--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "gh-pages": "^2.2.0",
     "line-message-builder": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -20,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +42,6 @@
   },
   "devDependencies": {
     "liff-type": "^2.0.8"
-  }
+  },
+  "homepage": "https://ufoo68.github.io/target-picker-test"
 }
